Backend: stabilize tests and improve security/RBAC