@@ -3,6 +3,7 @@ package com.naren.moviesapp.Service;
 import com.naren.moviesapp.Entity.Role;
 import com.naren.moviesapp.Enum.RoleName;
 import com.naren.moviesapp.Repo.RoleRepository;
+import com.naren.moviesapp.TestData.TestDataFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -10,11 +11,10 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
-import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -22,6 +22,7 @@ class RoleServiceTest {
 
     @Mock
     private RoleRepository roleRepository;
+
     private RoleService underTest;
 
     @BeforeEach
@@ -30,139 +31,196 @@ class RoleServiceTest {
     }
 
     @Test
-    void saveRole() {
-        Role role = new Role(RoleName.ROLE_USER);
+    void addRole() {
+        // given
+        Role role = TestDataFactory.createTestRole(RoleName.ROLE_USER);
+        when(roleRepository.existsByName(RoleName.ROLE_USER)).thenReturn(false);
 
-        when(roleRepository.existsRoleByName(role.getName())).thenReturn(false);
-
+        // when
         underTest.saveRole(role);
 
+        // then
         ArgumentCaptor<Role> roleArgumentCaptor = ArgumentCaptor.forClass(Role.class);
-
         verify(roleRepository).save(roleArgumentCaptor.capture());
-
-        Role captured = roleArgumentCaptor.getValue();
-
-        assertThat(captured.getName()).isEqualTo(RoleName.ROLE_USER);
+        Role capturedRole = roleArgumentCaptor.getValue();
+        assertThat(capturedRole).isEqualTo(role);
     }
 
     @Test
-    void saveRoleDoesNotSaveIfRoleExists() {
-        Role role = new Role(RoleName.ROLE_USER);
+    void addRoleWhenRoleExists() {
+        // given
+        Role role = TestDataFactory.createTestRole(RoleName.ROLE_USER);
+        when(roleRepository.existsByName(RoleName.ROLE_USER)).thenReturn(true);
 
-        when(roleRepository.existsRoleByName(role.getName())).thenReturn(true);
-
+        // when
         underTest.saveRole(role);
 
-        verify(roleRepository, never()).save(any());
-    }
-
-    @Test
-    void updateRole() {
-        Role role = new Role(RoleName.ROLE_ADMIN);
-        role.setId(1L);
-
-        underTest.updateRole(role);
-
-        verify(roleRepository).save(role);
+        // then
+        verify(roleRepository, never()).save(any(Role.class));
     }
 
     @Test
     void findRoleById() {
+        // given
         Long roleId = 1L;
-        Role expectedRole = new Role(RoleName.ROLE_USER);
-        expectedRole.setId(roleId);
-
+        Role expectedRole = TestDataFactory.createTestRole(RoleName.ROLE_USER);
         when(roleRepository.findById(roleId)).thenReturn(Optional.of(expectedRole));
 
+        // when
         Role actualRole = underTest.findRoleById(roleId);
 
+        // then
         assertThat(actualRole).isEqualTo(expectedRole);
     }
 
     @Test
-    void findRoleByIdReturnsNullIfNotFound() {
-        Long roleId = 999L;
-
-        when(roleRepository.findById(roleId)).thenReturn(Optional.empty());
-
-        Role actualRole = underTest.findRoleById(roleId);
-
-        assertThat(actualRole).isNull();
-    }
-
-    @Test
     void getAllRoles() {
-        List<Role> expectedRoles = Arrays.asList(
-                new Role(RoleName.ROLE_USER),
-                new Role(RoleName.ROLE_ADMIN),
-                new Role(RoleName.ROLE_SUPER_ADMIN)
-        );
+        // given
+        when(roleRepository.findAll()).thenReturn(java.util.List.of());
 
-        when(roleRepository.findAll()).thenReturn(expectedRoles);
+        // when
+        var roles = underTest.getAllRoles();
 
-        List<Role> actualRoles = underTest.getAllRoles();
-
-        assertThat(actualRoles).isEqualTo(expectedRoles);
+        // then
+        assertThat(roles).isNotNull();
         verify(roleRepository).findAll();
     }
 
     @Test
     void deleteRole() {
+        // given
         Long roleId = 1L;
 
+        // when
         underTest.deleteRole(roleId);
 
+        // then
         verify(roleRepository).deleteById(roleId);
     }
 
     @Test
     void findRoleByName() {
+        // given
         RoleName roleName = RoleName.ROLE_USER;
         Role expectedRole = new Role(roleName);
 
-        when(roleRepository.findRoleByName(roleName)).thenReturn(expectedRole);
+        when(roleRepository.findByName(roleName)).thenReturn(Optional.of(expectedRole));
 
+        // when
         Role actualRole = underTest.findRoleByName(roleName);
 
+        // then
         assertThat(actualRole).isEqualTo(expectedRole);
-        verify(roleRepository).findRoleByName(roleName);
+        verify(roleRepository).findByName(roleName);
+    }
+
+    @Test
+    void findRoleByName_contentManager() {
+        // given
+        RoleName roleName = RoleName.ROLE_CONTENT_MANAGER;
+        Role expectedRole = new Role(roleName);
+
+        when(roleRepository.findByName(roleName)).thenReturn(Optional.of(expectedRole));
+
+        // when
+        Role actualRole = underTest.findRoleByName(roleName);
+
+        // then
+        assertThat(actualRole).isEqualTo(expectedRole);
+        verify(roleRepository).findByName(roleName);
+    }
+
+    @Test
+    void findRoleByName_support() {
+        // given
+        RoleName roleName = RoleName.ROLE_SUPPORT;
+        Role expectedRole = new Role(roleName);
+
+        when(roleRepository.findByName(roleName)).thenReturn(Optional.of(expectedRole));
+
+        // when
+        Role actualRole = underTest.findRoleByName(roleName);
+
+        // then
+        assertThat(actualRole).isEqualTo(expectedRole);
+        verify(roleRepository).findByName(roleName);
     }
 
     @Test
     void findRoleByNameWithString() {
+        // given
         String roleName = "ROLE_USER";
-        Role expectedRole = new Role(RoleName.ROLE_USER);
+        Role expectedRole = TestDataFactory.createTestRole(RoleName.ROLE_USER);
 
-        when(roleRepository.findRoleByName(RoleName.ROLE_USER)).thenReturn(expectedRole);
+        when(roleRepository.findByName(RoleName.ROLE_USER)).thenReturn(Optional.of(expectedRole));
 
+        // when
         Role actualRole = underTest.findRoleByName(roleName);
 
+        // then
         assertThat(actualRole).isEqualTo(expectedRole);
-        verify(roleRepository).findRoleByName(RoleName.ROLE_USER);
+        verify(roleRepository).findByName(RoleName.ROLE_USER);
+    }
+
+    @Test
+    void findRoleByNameWithString_contentManager() {
+        // given
+        String roleName = "ROLE_CONTENT_MANAGER";
+        Role expectedRole = TestDataFactory.createTestRole(RoleName.ROLE_CONTENT_MANAGER);
+
+        when(roleRepository.findByName(RoleName.ROLE_CONTENT_MANAGER)).thenReturn(Optional.of(expectedRole));
+
+        // when
+        Role actualRole = underTest.findRoleByName(roleName);
+
+        // then
+        assertThat(actualRole).isEqualTo(expectedRole);
+        verify(roleRepository).findByName(RoleName.ROLE_CONTENT_MANAGER);
+    }
+
+    @Test
+    void findRoleByNameWithString_support() {
+        // given
+        String roleName = "ROLE_SUPPORT";
+        Role expectedRole = TestDataFactory.createTestRole(RoleName.ROLE_SUPPORT);
+
+        when(roleRepository.findByName(RoleName.ROLE_SUPPORT)).thenReturn(Optional.of(expectedRole));
+
+        // when
+        Role actualRole = underTest.findRoleByName(roleName);
+
+        // then
+        assertThat(actualRole).isEqualTo(expectedRole);
+        verify(roleRepository).findByName(RoleName.ROLE_SUPPORT);
     }
 
     @Test
     void existsByName() {
-        Role role = new Role(RoleName.ROLE_USER);
+        // given
+        Role role = TestDataFactory.createTestRole(RoleName.ROLE_USER);
 
-        when(roleRepository.existsRoleByName(role.getName())).thenReturn(true);
+        when(roleRepository.existsByName(role.getName())).thenReturn(true);
 
+        // when
         boolean result = underTest.existsByName(role);
 
+        // then
         assertThat(result).isTrue();
-        verify(roleRepository).existsRoleByName(role.getName());
+        verify(roleRepository).existsByName(role.getName());
     }
 
     @Test
     void existsByNameReturnsFalse() {
-        Role role = new Role(RoleName.ROLE_USER);
+        // given
+        Role role = TestDataFactory.createTestRole(RoleName.ROLE_USER);
 
-        when(roleRepository.existsRoleByName(role.getName())).thenReturn(false);
+        when(roleRepository.existsByName(role.getName())).thenReturn(false);
 
+        // when
         boolean result = underTest.existsByName(role);
 
+        // then
         assertThat(result).isFalse();
-        verify(roleRepository).existsRoleByName(role.getName());
+        verify(roleRepository).existsByName(role.getName());
     }
 }
